# matrix-lib-cpp

./: CMakeLists.txt  matrix_main.cpp  matrix_main.h  matrix_multiplication.cpp  matrix_multiplication.h
examples/: matrix_main.cpp
include/: Matrix.h
include/utils/: ClearMemoryArray.h  CreateMatrixFile.h  CreateRandFile.h  Math.h  NulMatrix.h  PrintMatrix.h
src/: Matrix.cpp
utils/: ClearMemoryArray.cpp  CreateMatrixFile.cpp  CreateRandFile.cpp  Math.cpp  NulMatrix.cpp  PrintMatrix.cpp
